[gd_scene load_steps=8 format=3 uid="uid://b165ca0fxleev"]

[ext_resource type="Script" path="res://Scripts/player_single_bullet.gd" id="1_bc0f4"]
[ext_resource type="Texture2D" uid="uid://dv8hpd503bpp" path="res://Assets/Sprites/Player Single Bullet.png" id="2_1v0iu"]
[ext_resource type="AudioStream" uid="uid://c462734cnw831" path="res://Assets/SingularLaserShot.mp3" id="3_2tma7"]

[sub_resource type="CircleShape2D" id="CircleShape2D_8sbmb"]
radius = 63.6241

[sub_resource type="Animation" id="Animation_sxuaq"]
length = 0.5
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Vector2i(0, 0), Vector2i(0, 1)]
}

[sub_resource type="Animation" id="Animation_ui1u2"]
resource_name = "fire"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Vector2i(0, 0), Vector2i(0, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6txce"]
_data = {
"RESET": SubResource("Animation_sxuaq"),
"fire": SubResource("Animation_ui1u2")
}

[node name="player_single_bullet" type="Area2D" groups=["PlayerBullet"]]
scale = Vector2(0.15, 0.15)
script = ExtResource("1_bc0f4")
speed = 600

[node name="Sprite2D" type="Sprite2D" parent="." groups=["PlayerBullet"]]
texture = ExtResource("2_1v0iu")
vframes = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="." groups=["PlayerBullet"]]
visible = false
position = Vector2(0.5, 0)
shape = SubResource("CircleShape2D_8sbmb")

[node name="Timer" type="Timer" parent="." groups=["PlayerBullet"]]
wait_time = 5.0
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="." groups=["PlayerBullet"]]
libraries = {
"": SubResource("AnimationLibrary_6txce")
}

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[node name="ShootSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_2tma7")
volume_db = -20.0

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
